min-width: 320px

--- a/style.css
+++ b/style.css
@@ -1062,8 +1062,8 @@ footer {
   /* end footer */
 }
 
-/* @media (min-width: 320px) and (max-width: 767px)  */
-@media (max-width: 767px) {
+/* @media (max-width: 767px) */
+@media (min-width: 320px) and (max-width: 767px) {
   /* 375px*/
   .container {
     width: 343px;
